proj1/tests/correct/nestedDef.py
def A():
    def B():
        pass
print 'str'

