proj1/tests/error/nestedClass.py
class A:
    class B:
        pass
print 'str'

